# aulas/aula10/swagger.yaml
@@ -26,6 +26,8 @@ paths:
               schema:
                 $ref: '#/components/schemas/Mensagem'
     get:
+      security:
+        - JWTAuth: []
       tags:
         - produtos
       responses:
@@ -114,6 +116,11 @@ paths:
               schema:
                 $ref: '#/components/schemas/Mensagem'
 components:
+  securitySchemes:
+    JWTAuth:
+      type: apiKey
+      in: header
+      name: Authorization
   schemas:
     Produto:
       type: object
